Fix compilation errors, linting issues, and potential bugs